objects/tffa__DebugLogConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Debug Log Configuration</description>
    <fields>
        <fullName>tffa__DatabaseLoggingLevel__c</fullName>
        <defaultValue>&quot;DEBUG&quot;</defaultValue>
        <description>Define the logging level upper limit to be persisted into database table</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Define the logging level upper limit to be persisted into database table</inlineHelpText>
        <label>Database Logging Level</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DebugCallStack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Log begin and end marker logs</description>
        <label>Debug Call Stack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If database and system is enabled</description>
        <label>Enable Database and System Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__MaskingEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If log masking is enabled when calling logger methods</description>
        <inlineHelpText>If log masking is enabled when calling logger methods</inlineHelpText>
        <label>Automatic Log Masking Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaskingPattern__c</fullName>
        <description>Define the regex masking pattern with pipes</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Define the regex masking pattern with pipes. The matching text will be replaced with ***</inlineHelpText>
        <label>Masking Pattern</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__RetentionPeriod__c</fullName>
        <defaultValue>1</defaultValue>
        <description>It is the period of time after which system debug logs will be purged from the system.</description>
        <inlineHelpText>System debug logs older than this period will be purged from the system.</inlineHelpText>
        <label>Log retention period in days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Debug Log Configuration</label>
</CustomObject>